--- a/templates/bot_portal/login.html
+++ b/templates/bot_portal/login.html
@@ -49,7 +49,7 @@
             <script async src="https://telegram.org/js/telegram-widget.js?22"
                     data-telegram-login="{{ bot_username }}"
                     data-size="large"
-                    data-auth-url="{{ url_for('bot_portal.handle_login', _external=True) }}"
+                    data-userpic="true"  data-auth-url="{{ url_for('bot_portal.handle_login', _external=True) }}"
                     data-request-access="write"></script>
         </div>
     </div>
