fix appeal detail and layout templates: update email address in footer, update template variables for consistency, and adjust title formatting in `appeal_detail.html`

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -41,7 +41,7 @@
         <p>&copy; 2025 Honji Review.</p>
         <div class="flex items-center gap-x-6">
             <a href="{{ url_for('main_site.about') }}" class="hover:text-indigo-400 transition">О нас</a>
-            <a href="mailto:honjireview.info@gmail.com" class="hover:text-indigo-400 transition">Связаться с нами</a>
+            <a href="mailto:info@honjireview.uz class="hover:text-indigo-400 transition">Связаться с нами</a>
             <a href="https://creativecommons.org/licenses/by-sa/4.0/deed.ru" target="_blank" rel="noopener noreferrer" class="hover:text-indigo-400 transition">Лицензия CC-BY-SA 4.0</a>
         </div>
     </div>
