update CSS link in showcase template: modify static file URL to refer to `main_site` for proper stylesheet loading

--- a/templates/bot_portal/showcase.html
+++ b/templates/bot_portal/showcase.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HJR-Bot: Интерактивный Обзор</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/bot_portal_showcase.css') }}">
+    <link rel="stylesheet" href="{{ url_for('main_site.static', filename='css/bot_portal_showcase.css') }}">
 </head>
 <body class="bg-slate-900 text-slate-300">
 
